--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
-    "firebase": "^6.0.0",
+    "firebase": "6.0.0",
     "firebase-admin": "^7.3.0",
     "firebase-functions": "^2.3.1",
+    "firebase-tools": "^7.2.1",
+    "global": "^4.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
